--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,8 +15,8 @@ add_executable (engine
   vk_engine.cpp
   vk_loader.h
   vk_loader.cpp
-  camera.cpp
-  camera.h
+  camera/camera.cpp
+  camera/camera.h
   engine/input.cpp
 )
 
