more debug stuff

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,5 @@
 
-# Add source to this project's executable.
-add_executable (engine 
+file(GLOB SRC_SRC
   main.cpp
   vk_types.h
   vk_initializers.cpp
@@ -15,8 +14,9 @@ add_executable (engine
   vk_engine.cpp
   vk_loader.h
   vk_loader.cpp
-  camera/camera.cpp
-  camera/camera.h
+)
+
+file(GLOB SRC_GRAPHICS
   graphics/light.h
   graphics/light.cpp
   graphics/gfx_device.h
@@ -27,13 +27,24 @@ add_executable (engine
   graphics/image_codex.cpp
   graphics/swapchain.h
   graphics/swapchain.cpp
+)
+
+file(GLOB SRC_CAMERA
+  camera/camera.cpp
+  camera/camera.h
+)
+
+file(GLOB SRC_MATH
   math/transform.h
   math/transform.cpp
+)
+
+file(GLOB SRC_ENGINE
   engine/input.h
   engine/input.cpp
+)
 
-  # ----------
-  # imguizmo
+file(GLOB SRC_IMGUIZMO
   imguizmo/GraphEditor.cpp
   imguizmo/GraphEditor.h
   imguizmo/ImCurveEdit.cpp
@@ -47,7 +58,25 @@ add_executable (engine
   imguizmo/GraphEditor.h
 )
 
+# Add source to this project's executable.
+add_executable (engine 
+	${SRC_SRC}
+	${SRC_GRAPHICS}
+	${SRC_CAMERA}
+	${SRC_MATH}
+	${SRC_ENGINE}
+	${SRC_IMGUIZMO}
+)
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(TARGET engine PROPERTY CXX_STANDARD 23)
+
+source_group("graphics" FILES ${SRC_GRAPHICS})
+source_group("src" FILES ${SRC_SRC})
+source_group("camera" FILES ${SRC_CAMERA})
+source_group("math" FILES ${SRC_MATH})
+source_group("engine" FILES ${SRC_ENGINE})
+source_group("imguizmo" FILES ${SRC_IMGUIZMO})
 
 target_compile_definitions(engine PUBLIC GLM_FORCE_DEPTH_ZERO_TO_ONE)
 target_include_directories(engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
