imgui bindless and correct srgb

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,8 @@ file (GLOB SRC_PIPELINES
   graphics/pipelines/wireframe_pipeline.cpp
   graphics/pipelines/gbuffer_pipeline.h
   graphics/pipelines/gbuffer_pipeline.cpp
+  graphics/pipelines/imgui_pipeline.h
+  graphics/pipelines/imgui_pipeline.cpp
 )
 
 file(GLOB SRC_CAMERA
