--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third_party/assimp"]
 	path = third_party/assimp
-	url = git@github.com:daniel-dron/assimp.git
+	url = https://github.com/daniel-dron/assimp.git
