Simple LOD system with meshoptimizer simplifier

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -133,4 +133,4 @@ target_include_directories(engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 target_precompile_headers(engine PRIVATE pch.h)
 
-target_link_libraries(engine PUBLIC vma glm Vulkan::Vulkan fmt::fmt stb_image SDL2::SDL2 vkbootstrap imgui assimp)
+target_link_libraries(engine PUBLIC vma glm Vulkan::Vulkan fmt::fmt stb_image SDL2::SDL2 vkbootstrap imgui assimp meshoptimizer)
