Clean up cmake files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,136 +1,120 @@
+# /*****************************************************************************************
+# ******************************************************************************************
+# **                                                                                      **
+# **                                                                                      **
+# **     ███      ▄█     █▄   ▄█   ▄█        ▄█     ▄██████▄     ▄█    █▄        ███      **
+# ** ▀█████████▄ ███     ███ ███  ███       ███    ███    ███   ███    ███   ▀█████████▄  **
+# **    ▀███▀▀██ ███     ███ ███▌ ███       ███▌   ███    █▀    ███    ███      ▀███▀▀██  **
+# **     ███   ▀ ███     ███ ███▌ ███       ███▌  ▄███         ▄███▄▄▄▄███▄▄     ███   ▀  **
+# **     ███     ███     ███ ███▌ ███       ███▌ ▀▀███ ████▄  ▀▀███▀▀▀▀███▀      ███      **
+# **     ███     ███     ███ ███  ███       ███    ███    ███   ███    ███       ███      **
+# **     ███     ███ ▄█▄ ███ ███  ███▌    ▄ ███    ███    ███   ███    ███       ███      **
+# **    ▄████▀    ▀███▀███▀  █▀   █████▄▄██ █▀     ████████▀    ███    █▀       ▄████▀    **
+# **                              ▀                                                       **
+# **                                                                                      **
+# **                      Copyright (c) 2024-present Daniel Dron                          **
+# **                                                                                      **
+# **                  This software is released under the MIT License.                    **
+# **                       https://opensource.org/licenses/MIT                            **
+# **                                                                                      **
+# ******************************************************************************************
+# *****************************************************************************************/
 
-file(GLOB SRC_SRC
-  main.cpp
-  vk_types.h
-  vk_initializers.cpp
-  vk_initializers.h
-  vk_pipelines.h
-  vk_pipelines.cpp
-  vk_engine.h
-  vk_engine.cpp
-  pch.h
-)
+cmake_minimum_required(VERSION 3.8.0 FATAL_ERROR)
 
-file(GLOB SRC_GRAPHICS
-  graphics/light.h
-  graphics/light.cpp
-  graphics/gfx_device.h
-  graphics/gfx_device.cpp
-  graphics/gpu_image.h
-  graphics/gpu_image.cpp
-  graphics/descriptors.h
-  graphics/descriptors.cpp
-  graphics/image_codex.h
-  graphics/image_codex.cpp
-  graphics/mesh_codex.h
-  graphics/mesh_codex.cpp
-  graphics/material_codex.h
-  graphics/material_codex.cpp
-  graphics/swapchain.h
-  graphics/swapchain.cpp
-  graphics/draw_command.h
-  graphics/draw_command.cpp
-  graphics/bindless.h
-  graphics/bindless.cpp
-  graphics/gbuffer.h
-  graphics/ibl.h
-  graphics/ibl.cpp
-  graphics/shader_storage.h
-  graphics/shader_storage.cpp
-)
+project(TwilightEngine VERSION 0.1.0 LANGUAGES CXX C)
 
-file (GLOB SRC_PIPELINES
-  graphics/pipelines/pipeline.h
-  graphics/pipelines/pbr_pipeline.h
-  graphics/pipelines/pbr_pipeline.cpp
-  graphics/pipelines/wireframe_pipeline.h
-  graphics/pipelines/wireframe_pipeline.cpp
-  graphics/pipelines/gbuffer_pipeline.h
-  graphics/pipelines/gbuffer_pipeline.cpp
-  graphics/pipelines/imgui_pipeline.h
-  graphics/pipelines/imgui_pipeline.cpp
-  graphics/pipelines/skybox_pipeline.h
-  graphics/pipelines/skybox_pipeline.cpp
-  graphics/pipelines/compute_pipeline.h
-  graphics/pipelines/compute_pipeline.cpp
-  graphics/pipelines/shadowmap.h
-  graphics/pipelines/shadowmap.cpp
-)
+file(GLOB_RECURSE ALL_SRCS *.cpp *.hpp *.h)
 
-file(GLOB SRC_CAMERA
-  camera/camera.cpp
-  camera/camera.h
-)
+add_executable(TwilightEngine ${ALL_SRCS})
 
-file(GLOB SRC_MATH
-  math/transform.h
-  math/transform.cpp
-)
-
-file(GLOB SRC_ENGINE
-  engine/input.h
-  engine/input.cpp
-  engine/loader.h
-  engine/loader.cpp
-  engine/scene.h
-  engine/scene.cpp
-)
-
-file(GLOB SRC_IMGUIZMO
-  imguizmo/GraphEditor.cpp
-  imguizmo/GraphEditor.h
-  imguizmo/ImCurveEdit.cpp
-  imguizmo/ImCurveEdit.h
-  imguizmo/ImGradient.cpp
-  imguizmo/ImGradient.h
-  imguizmo/ImGuizmo.cpp
-  imguizmo/ImGuizmo.h
-  imguizmo/ImSequencer.cpp
-  imguizmo/ImSequencer.h
-  imguizmo/GraphEditor.h
-)
-
-file(GLOB SRC_UTILS
-  utils/workers.cpp
-  utils/workers.h
-  utils/ProfilerTask.h
-  utils/ImGuiProfilerRenderer.h
-  utils/circular_buffer.h
-  utils/profiler.h
-  utils/profiler.cpp
-  utils/imgui_console.h
-)
-
-# Add source to this project's executable.
-add_executable (engine 
-	${SRC_SRC}
-	${SRC_PIPELINES}
-	${SRC_GRAPHICS}
-	${SRC_CAMERA}
-	${SRC_MATH}
-	${SRC_ENGINE}
-	${SRC_IMGUIZMO}
-  ${SRC_UTILS}
-)
-
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+# Enforce latest C++23 features (We will not be using most of them, but there are a few time savers)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-target_compile_features(engine PRIVATE cxx_std_23)
+target_compile_features(TwilightEngine PRIVATE cxx_std_23)
+set_target_properties(TwilightEngine PROPERTIES
+    VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:TwilightEngine>"
+)
+target_compile_definitions(TwilightEngine PUBLIC GLM_FORCE_DEPTH_ZERO_TO_ONE)
+target_compile_definitions(TwilightEngine PUBLIC GLM_FORCE_RIGHT_HANDED)
 
-source_group("graphics" FILES ${SRC_GRAPHICS})
-source_group("graphics/pipelines" FILES ${SRC_PIPELINES})
-source_group("src" FILES ${SRC_SRC})
-source_group("camera" FILES ${SRC_CAMERA})
-source_group("math" FILES ${SRC_MATH})
-source_group("engine" FILES ${SRC_ENGINE})
-source_group("imguizmo" FILES ${SRC_IMGUIZMO})
-source_group("utils" FILES ${SRC_UTILS})
+# Set some preprocessor flags relative to what Visual Studio run configuration is being compiled/used
+add_compile_definitions(
+  $<$<CONFIG:Debug,RelWithDebInfo>:ENABLE_DEBUG_FEATURES>
+)
 
-target_compile_definitions(engine PUBLIC GLM_FORCE_DEPTH_ZERO_TO_ONE)
-target_compile_definitions(engine PUBLIC GLM_FORCE_RIGHT_HANDED)
-target_include_directories(engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+# Set twilight engine folder structure for Visual Studio Solutions
+foreach(SRC_FILE ${ALL_SRCS})
+    file(RELATIVE_PATH SRC_REL_PATH ${PROJECT_SOURCE_DIR} ${SRC_FILE})
+    get_filename_component(SRC_REL_DIR ${SRC_REL_PATH} DIRECTORY)
+    
+    if(SRC_REL_DIR)
+        string(REPLACE "/" "\\" VS_FOLDER "src\\${SRC_REL_DIR}")
+        source_group("${VS_FOLDER}" FILES ${SRC_FILE})
+    else()
+        source_group("src" FILES ${SRC_FILE})
+    endif()
+endforeach()
+target_include_directories(TwilightEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_precompile_headers(engine PRIVATE pch.h)
+# Pre-Compiled Headers for faster compilation
+target_precompile_headers(TwilightEngine PRIVATE pch.h)
 
-target_link_libraries(engine PUBLIC vma glm Vulkan::Vulkan fmt::fmt stb_image SDL2::SDL2 vkbootstrap imgui assimp meshoptimizer)
+target_link_libraries(TwilightEngine PUBLIC tracy meshoptimizer assimp glm vma fmt::fmt vkbootstrap SDL2::SDL2 stb_image imgui)
+
+# SHADERS
+set(SHADER_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../shaders")
+set(SHADER_BINARY_DIR "${PROJECT_SOURCE_DIR}/../bin/shaders/")
+file(GLOB GLSL_SHADERS ${SHADER_SOURCE_DIR}/*.vert ${SHADER_SOURCE_DIR}/*.frag ${SHADER_SOURCE_DIR}/*.comp)
+file(GLOB_RECURSE ALL_GLSL_SHADER_FILES ${SHADER_SOURCE_DIR}/*.vert ${SHADER_SOURCE_DIR}/*.frag ${SHADER_SOURCE_DIR}/*.comp ${SHADER_SOURCE_DIR}/*.glsl)
+
+message(STATUS ${ALL_GLSL_SHADER_FILES})
+
+find_program(GLSL_COMPILER glslangValidator)
+message(${GLSL_COMPILER})
+
+foreach(GLSL ${GLSL_SHADERS})
+  message(STATUS "BUILDING SHADER")
+  get_filename_component(FILE_NAME ${GLSL} NAME)
+  set(SPIRV_COMBINED "${SHADER_BINARY_DIR}/${FILE_NAME}.spv")
+
+  message(STATUS ${GLSL})
+  add_custom_command(
+    OUTPUT ${SPIRV_COMBINED}
+    COMMAND ${GLSL_COMPILER} -V -gVS ${GLSL} -o ${SPIRV_COMBINED}
+	DEPENDS ${GLSL}
+	BYPRODUCTS ${SPIRV_VERTEX} ${SPIRV_PIXEL}
+  )
+  list(APPEND SPIRV_BINARY_FILES ${SPIRV_COMBINED})
+endforeach(GLSL)
+
+#
+# Black magic to create a visual studio project inside the solution and for intellisense to work properly
+# with proper filter paths to replica actual directories.
+#
+add_library(Shaders STATIC ${ALL_GLSL_SHADER_FILES})
+set_target_properties(Shaders PROPERTIES LINKER_LANGUAGE CXX)
+set_source_files_properties(
+    ${ALL_GLSL_SHADER_FILES}
+    PROPERTIES
+    VS_TOOL_OVERRIDE "None"  # Prevents VS from trying to compile them
+)
+
+add_custom_target(
+    ShadersCompile
+    DEPENDS ${SPIRV_BINARY_FILES}
+)
+add_dependencies(Shaders ShadersCompile)
+add_dependencies(TwilightEngine ShadersCompile)
+
+foreach(SHADER_FILE ${ALL_GLSL_SHADER_FILES})
+    file(RELATIVE_PATH SHADER_REL_PATH ${SHADER_SOURCE_DIR} ${SHADER_FILE})
+    get_filename_component(SHADER_REL_DIR ${SHADER_REL_PATH} DIRECTORY)
+    
+    if(SHADER_REL_DIR)
+        string(REPLACE "/" "\\" VS_FOLDER "Shaders\\${SHADER_REL_DIR}")
+        source_group("${VS_FOLDER}" FILES ${SHADER_FILE})
+    else()
+        source_group("Shaders" FILES ${SHADER_FILE})
+    endif()
+endforeach()
